--- a/cdui-showcase/Shared/New Group/UserCell.xib
+++ b/cdui-showcase/Shared/New Group/UserCell.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,7 +20,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iEh-B2-W1G">
-                        <rect key="frame" x="80" y="18.5" width="42" height="21"/>
+                        <rect key="frame" x="80" y="19.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -47,7 +48,7 @@
             </view>
             <constraints>
                 <constraint firstItem="zI1-Yy-yyn" firstAttribute="leading" secondItem="4ye-Zr-lc4" secondAttribute="leading" constant="24" id="3Xm-CI-t6N"/>
-                <constraint firstItem="iEh-B2-W1G" firstAttribute="centerY" secondItem="4ye-Zr-lc4" secondAttribute="centerY" constant="-10" id="A0o-Z6-dj1"/>
+                <constraint firstItem="iEh-B2-W1G" firstAttribute="centerY" secondItem="4ye-Zr-lc4" secondAttribute="centerY" constant="-9" id="A0o-Z6-dj1"/>
                 <constraint firstItem="idA-Qd-oSP" firstAttribute="centerY" secondItem="4ye-Zr-lc4" secondAttribute="centerY" constant="10" id="dPw-f5-Q2e"/>
                 <constraint firstItem="zI1-Yy-yyn" firstAttribute="centerY" secondItem="4ye-Zr-lc4" secondAttribute="centerY" id="hH2-8P-dBH"/>
                 <constraint firstItem="idA-Qd-oSP" firstAttribute="leading" secondItem="zI1-Yy-yyn" secondAttribute="trailing" constant="24" id="jP9-3d-p1k"/>
