--- a/cdui-showcase/Screens/Stream/Stream.storyboard
+++ b/cdui-showcase/Screens/Stream/Stream.storyboard
@@ -18,35 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ah9-rg-KNf">
-                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OvY-L2-iFM">
-                                        <rect key="frame" x="187" y="22.5" width="0.0" height="0.0"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1kx-UX-Dg6">
-                                        <rect key="frame" x="0.0" y="43" width="375" height="1"/>
-                                        <color key="backgroundColor" red="0.76167827072538863" green="0.76167827072538863" blue="0.76167827072538863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="1" id="UD6-h2-QTS" customClass="HairlineConstraint" customModule="cdui_showcase" customModuleProvider="target"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="1kx-UX-Dg6" secondAttribute="trailing" id="1g7-x6-gZt"/>
-                                    <constraint firstItem="1kx-UX-Dg6" firstAttribute="leading" secondItem="Ah9-rg-KNf" secondAttribute="leading" id="3ni-ml-PnB"/>
-                                    <constraint firstAttribute="bottom" secondItem="1kx-UX-Dg6" secondAttribute="bottom" id="9eL-kU-ktI"/>
-                                    <constraint firstItem="OvY-L2-iFM" firstAttribute="centerY" secondItem="Ah9-rg-KNf" secondAttribute="centerY" id="ahB-8q-PnP"/>
-                                    <constraint firstItem="OvY-L2-iFM" firstAttribute="centerX" secondItem="Ah9-rg-KNf" secondAttribute="centerX" id="drH-p2-PwD"/>
-                                    <constraint firstAttribute="height" constant="44" id="xn8-0e-ElQ"/>
-                                </constraints>
-                            </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-ls-1mF">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aCd-ls-1mF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NUo-TB-xSm">
                                     <size key="itemSize" width="50" height="50"/>
@@ -56,24 +29,30 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NYG-0V-fuU">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nCr-gf-YCo">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="extraLight"/>
+                            </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Ah9-rg-KNf" firstAttribute="top" secondItem="7Jb-YS-cAr" secondAttribute="top" id="0Eq-xM-8W3"/>
+                            <constraint firstItem="7Jb-YS-cAr" firstAttribute="top" secondItem="NYG-0V-fuU" secondAttribute="bottom" id="0os-m4-oWi"/>
+                            <constraint firstItem="7Jb-YS-cAr" firstAttribute="trailing" secondItem="NYG-0V-fuU" secondAttribute="trailing" id="FF3-5d-Lug"/>
                             <constraint firstItem="7Jb-YS-cAr" firstAttribute="trailing" secondItem="aCd-ls-1mF" secondAttribute="trailing" id="HCV-Tt-OOO"/>
-                            <constraint firstItem="7Jb-YS-cAr" firstAttribute="trailing" secondItem="Ah9-rg-KNf" secondAttribute="trailing" id="KGx-yl-nvd"/>
                             <constraint firstItem="aCd-ls-1mF" firstAttribute="leading" secondItem="7Jb-YS-cAr" secondAttribute="leading" id="NPa-A3-inM"/>
+                            <constraint firstItem="aCd-ls-1mF" firstAttribute="top" secondItem="7Jb-YS-cAr" secondAttribute="top" id="iBG-LC-9y3"/>
                             <constraint firstAttribute="bottom" secondItem="aCd-ls-1mF" secondAttribute="bottom" id="psR-Do-JFg"/>
-                            <constraint firstItem="Ah9-rg-KNf" firstAttribute="leading" secondItem="7Jb-YS-cAr" secondAttribute="leading" id="tSc-ZH-Mf5"/>
-                            <constraint firstItem="aCd-ls-1mF" firstAttribute="top" secondItem="Ah9-rg-KNf" secondAttribute="bottom" id="wMp-Yf-RjO"/>
+                            <constraint firstItem="NYG-0V-fuU" firstAttribute="leading" secondItem="7Jb-YS-cAr" secondAttribute="leading" id="qys-BI-flP"/>
+                            <constraint firstAttribute="top" secondItem="NYG-0V-fuU" secondAttribute="top" id="rsc-EC-xHS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7Jb-YS-cAr"/>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="aCd-ls-1mF" id="Etf-Fv-fID"/>
-                        <outlet property="headerLabel" destination="OvY-L2-iFM" id="sW4-KM-aDU"/>
-                        <outlet property="headerSeparator" destination="1kx-UX-Dg6" id="ZOo-Bv-emx"/>
-                        <outlet property="headerView" destination="Ah9-rg-KNf" id="bY7-d1-t1a"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="opx-sa-49y" userLabel="First Responder" sceneMemberID="firstResponder"/>
