--- a/cdui-showcase/Screens/Article/Article.storyboard
+++ b/cdui-showcase/Screens/Article/Article.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Article Detail Controller-->
+        <!--Article Controller-->
         <scene sceneID="HZ7-C6-xzN">
             <objects>
-                <viewController id="Qdo-r0-Iny" customClass="ArticleDetailController" customModule="cdui_showcase" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Qdo-r0-Iny" customClass="ArticleController" customModule="cdui_showcase" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ErF-Rn-AZ7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,10 +32,13 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5CH-CX-jkE">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgD-aR-yll">
-                                        <rect key="frame" x="20" y="7" width="46" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgD-aR-yll">
+                                        <rect key="frame" x="10" y="0.0" width="80" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="OgH-mA-EDv"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="14" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <state key="normal" image="ic-back"/>
                                         <connections>
                                             <action selector="leftButtonTapped:" destination="Qdo-r0-Iny" eventType="touchUpInside" id="GFh-Sy-QLc"/>
                                         </connections>
@@ -47,13 +50,27 @@
                                             <constraint firstAttribute="height" constant="1" id="fyN-Cw-sPr" customClass="HairlineConstraint" customModule="cdui_showcase" customModuleProvider="target"/>
                                         </constraints>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XSl-Mg-1HV">
+                                        <rect key="frame" x="295" y="0.0" width="70" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="70" id="JXd-8q-3DF"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="14" maxY="0.0"/>
+                                        <state key="normal" image="ic-comment"/>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="UjB-aJ-kDI" secondAttribute="trailing" id="BBE-yv-JCR"/>
                                     <constraint firstAttribute="height" constant="44" id="EES-hn-7Kd"/>
+                                    <constraint firstItem="sgD-aR-yll" firstAttribute="leading" secondItem="5CH-CX-jkE" secondAttribute="leading" constant="10" id="SZu-WA-kBr"/>
+                                    <constraint firstAttribute="trailing" secondItem="XSl-Mg-1HV" secondAttribute="trailing" constant="10" id="TMv-aZ-6fm"/>
+                                    <constraint firstAttribute="bottom" secondItem="sgD-aR-yll" secondAttribute="bottom" id="W1c-nL-RKD"/>
                                     <constraint firstAttribute="bottom" secondItem="UjB-aJ-kDI" secondAttribute="bottom" id="Xna-oD-dgP"/>
+                                    <constraint firstItem="XSl-Mg-1HV" firstAttribute="top" secondItem="5CH-CX-jkE" secondAttribute="top" id="ZEX-3N-W2M"/>
+                                    <constraint firstAttribute="bottom" secondItem="XSl-Mg-1HV" secondAttribute="bottom" id="fwT-bU-AOf"/>
                                     <constraint firstItem="UjB-aJ-kDI" firstAttribute="leading" secondItem="5CH-CX-jkE" secondAttribute="leading" id="lIN-E4-4Xg"/>
+                                    <constraint firstItem="sgD-aR-yll" firstAttribute="top" secondItem="5CH-CX-jkE" secondAttribute="top" id="v4G-gC-WOK"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z5D-QQ-Pbe">
@@ -90,4 +107,8 @@
             <point key="canvasLocation" x="-231.19999999999999" y="11.244377811094454"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic-back" width="22" height="18"/>
+        <image name="ic-comment" width="24" height="22"/>
+    </resources>
 </document>
